@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-21T16:26:07Z",
-  "count_outdated" : 2259,
-  "uniques_outdated" : 494,
-  "count" : 2307,
+  "timestamp" : "2022-07-22T01:54:22Z",
+  "count_outdated" : 2262,
+  "uniques_outdated" : 495,
+  "count" : 2310,
   "uniques" : 521,
   "clones" : [
-    {
-      "timestamp": "2022-07-07T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-08T00:00:00Z",
       "count": 2,
@@ -84,8 +77,8 @@
     },
     {
       "timestamp": "2022-07-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
